# dataclerk

./: Cargo.toml  Justfile  README.md  build.rs  snapcraft.yaml
src/: client.rs  main.rs
