[package]
name = "dataclerk"
version = "0.1.0"
description = "A simple server for storing your data"
readme = "README.md"
authors = ["Tim McNamara <tim.mcnamara@canonical.com>"]
edition = "2018"
categories = [
    "network-programming",
    "logging",
    "small-data",
    "cli",
    "http",
]


[dependencies]
actix-rt = "0.2"
actix-web = { git = "https://github.com/actix/actix-web.git", branch = "master" }
clap  = "2.32"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
lazy_static = "1.3"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.8"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.hashbrown]
version = "0.2"
features = ["rayon"]

[dependencies.rusqlite]
version = "~0.16.0"
features = ["bundled"]


[profile.release]
debug = true
lto = true
opt-level = 3
codegen-units = 1